# FastAI

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  example.env  pyproject.toml
src/: dependencies.py  main.py  models.py  new_python_file.py  reusebel_types.py  reuseble_types.py  router.py  settings.py  validate_example.py
src/clients/: gotenberg.py  s3.py
src/sites/: create_site.py  exceptions.py  generate_html.py  get_site.py  get_user_sites.py  router.py  schemas.py  service.py
src/static/: frontend-settings.json
src/users/: get_user.py  router.py  schemas.py  service.py
src/views/: create_site.py  generate_html.py  get_site.py  get_user.py  get_user_sites.py
